tests/snapshots/anonymous_class_attributes_tests__anonymous_class_with_attribute_params.snap
---
source: tests/anonymous_class_attributes_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 10,
                    },
                    span: Span {
                        start: 6,
                        end: 10,
                    },
                },
                expr: New {
                    class: AnonymousClass {
                        attributes: [
                            AttributeGroup {
                                attributes: [
                                    Attribute {
                                        name: Name {
                                            parts: [
                                                Token {
                                                    kind: Identifier,
                                                    span: Span {
                                                        start: 19,
                                                        end: 24,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 19,
                                                end: 24,
                                            },
                                        },
                                        args: [
                                            Arg {
                                                name: None,
                                                value: String {
                                                    value: [
                                                        39,
                                                        47,
                                                        97,
                                                        112,
                                                        105,
                                                        47,
                                                        117,
                                                        115,
                                                        101,
                                                        114,
                                                        115,
                                                        39,
                                                    ],
                                                    span: Span {
                                                        start: 25,
                                                        end: 37,
                                                    },
                                                },
                                                unpack: false,
                                                span: Span {
                                                    start: 25,
                                                    end: 37,
                                                },
                                            },
                                            Arg {
                                                name: Some(
                                                    Token {
                                                        kind: Identifier,
                                                        span: Span {
                                                            start: 39,
                                                            end: 46,
                                                        },
                                                    },
                                                ),
                                                value: Array {
                                                    items: [
                                                        ArrayItem {
                                                            key: None,
                                                            value: String {
                                                                value: [
                                                                    39,
                                                                    71,
                                                                    69,
                                                                    84,
                                                                    39,
                                                                ],
                                                                span: Span {
                                                                    start: 49,
                                                                    end: 54,
                                                                },
                                                            },
                                                            by_ref: false,
                                                            unpack: false,
                                                            span: Span {
                                                                start: 49,
                                                                end: 54,
                                                            },
                                                        },
                                                        ArrayItem {
                                                            key: None,
                                                            value: String {
                                                                value: [
                                                                    39,
                                                                    80,
                                                                    79,
                                                                    83,
                                                                    84,
                                                                    39,
                                                                ],
                                                                span: Span {
                                                                    start: 56,
                                                                    end: 62,
                                                                },
                                                            },
                                                            by_ref: false,
                                                            unpack: false,
                                                            span: Span {
                                                                start: 56,
                                                                end: 62,
                                                            },
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 48,
                                                        end: 64,
                                                    },
                                                },
                                                unpack: false,
                                                span: Span {
                                                    start: 39,
                                                    end: 64,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 19,
                                            end: 65,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 17,
                                    end: 71,
                                },
                            },
                        ],
                        modifiers: [],
                        args: [],
                        extends: None,
                        implements: [],
                        members: [
                            Method {
                                attributes: [],
                                modifiers: [
                                    Token {
                                        kind: Public,
                                        span: Span {
                                            start: 78,
                                            end: 84,
                                        },
                                    },
                                ],
                                name: Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 94,
                                        end: 100,
                                    },
                                },
                                params: [],
                                return_type: None,
                                body: [],
                                doc_comment: None,
                                span: Span {
                                    start: 78,
                                    end: 107,
                                },
                            },
                        ],
                        span: Span {
                            start: 17,
                            end: 108,
                        },
                    },
                    args: [],
                    span: Span {
                        start: 13,
                        end: 108,
                    },
                },
                span: Span {
                    start: 6,
                    end: 108,
                },
            },
            span: Span {
                start: 6,
                end: 109,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 109,
    },
}
