tests/snapshots/anonymous_class_attributes_tests__anonymous_class_with_use_trait.snap
---
source: tests/anonymous_class_attributes_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 10,
                    },
                    span: Span {
                        start: 6,
                        end: 10,
                    },
                },
                expr: New {
                    class: AnonymousClass {
                        attributes: [
                            AttributeGroup {
                                attributes: [
                                    Attribute {
                                        name: Name {
                                            parts: [
                                                Token {
                                                    kind: Identifier,
                                                    span: Span {
                                                        start: 19,
                                                        end: 25,
                                                    },
                                                },
                                            ],
                                            span: Span {
                                                start: 19,
                                                end: 25,
                                            },
                                        },
                                        args: [],
                                        span: Span {
                                            start: 19,
                                            end: 26,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 17,
                                    end: 32,
                                },
                            },
                        ],
                        modifiers: [],
                        args: [],
                        extends: None,
                        implements: [],
                        members: [
                            TraitUse {
                                attributes: [],
                                traits: [
                                    Name {
                                        parts: [
                                            Token {
                                                kind: Identifier,
                                                span: Span {
                                                    start: 43,
                                                    end: 50,
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 43,
                                            end: 50,
                                        },
                                    },
                                ],
                                adaptations: [],
                                doc_comment: None,
                                span: Span {
                                    start: 39,
                                    end: 67,
                                },
                            },
                            Method {
                                attributes: [],
                                modifiers: [
                                    Token {
                                        kind: Public,
                                        span: Span {
                                            start: 61,
                                            end: 67,
                                        },
                                    },
                                ],
                                name: Token {
                                    kind: Identifier,
                                    span: Span {
                                        start: 77,
                                        end: 83,
                                    },
                                },
                                params: [],
                                return_type: None,
                                body: [],
                                doc_comment: None,
                                span: Span {
                                    start: 61,
                                    end: 90,
                                },
                            },
                        ],
                        span: Span {
                            start: 17,
                            end: 91,
                        },
                    },
                    args: [],
                    span: Span {
                        start: 13,
                        end: 91,
                    },
                },
                span: Span {
                    start: 6,
                    end: 91,
                },
            },
            span: Span {
                start: 6,
                end: 92,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 92,
    },
}
